# medzernik.github.io

./: .gitignore  .gitmodules  404.html  CNAME  Cargo.toml  Trunk.toml  bundled.scss  hugo.toml  index.html  medzernik-dev-a3954d4a455e2d4c.js  medzernik-dev-a3954d4a455e2d4c_bg.wasm  package.json  rust-analyzer.toml  rustfmt.toml  tsconfig.json  vite.config.js
.devcontainer/: devcontainer.json
.github/workflows/: deploy_pages.yml  rust.yml  vercel_deploy.yml  vercel_preview.yml
content/: README.md  about.md  index.md
content/posts/: about.md  berkeley-mono-fonts.md
posts/: post1.md
public/: index.html  index.xml  sitemap.xml
public/categories/: index.html  index.xml
public/content/about/: about.md
public/content/posts/: meep.md  post1.md
public/css/: typography.css
public/posts/: index.html  index.xml
public/posts/about/: index.html
public/readme/: index.html
public/series/: index.html  index.xml
public/tags/: index.html  index.xml
scripts/: install_deps.sh  permissions_fix.sh
src/: app.rs  main.module.css  main.rs  script.js  script.ts
src/components/: button.rs  header.rs
src/pages/: about_page.rs  home_page.rs  mod.rs  post_page.rs  posts_page.rs
styles_parsed/: _index.scss  main.module.css
themes/risotto/layouts/partials/: head.html
themes/risotto/static/css/: typography.css
