[package]
name = "medzernik-dev"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
console_error_panic_hook = "0.1"
gray_matter = "0.3.2"
include_dir = "0.7"
leptos = { version = "0.8", features = ["csr"] }
leptos-use = "0.16"
leptos_reactive = "0.6"
leptos_router = "0.8"
markdown = "1.0.0-alpha.23"
once_cell = "1.21.3"
pulldown-cmark = "0.13.0"
reqwest = "0.12"
stylance = { version = "0.6" }
serde = { version = "1.0", features = ["derive"] }

[profile.dev]
debug = false
